--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "3d9a1e16-acad-4f19-b105-a0e67de4a0e6",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "f0cc45d2-d5ae-4afc-9f1d-251923995990",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,8 +71,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "dede4beb-9bfe-413c-846a-a2e5c6eaa784",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForMaskedLM\n",
@@ -80,9 +82,7 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'StanfordAIMI/RadBERT'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'filling_mask', AutoModelForMaskedLM))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,8 +96,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "dca587eb-3213-4089-a844-4bb89cf1afa3",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# This is a sentence with a masked word that will be given to the model.\n",
     "# It instruction usually given to a patient when a radiographer is doing a chest X-ray\n",
@@ -105,9 +107,7 @@
     "\n",
     "# Make sure our text can be used in an SQL statement.\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,6 +129,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "0d8288e3-0658-44a3-8fc6-92d6e1c4b3f1",
    "metadata": {
     "slideshow": {
@@ -138,8 +139,9 @@
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_FILLING_MASK_UDF(\n",
@@ -152,9 +154,7 @@
     "    )\n",
     ")\n",
     "SELECT filled_text, score, rank, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,11 +184,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "00934fda-f64e-45f4-9686-c37cf34ea500",
    "metadata": {},
-   "source": [],
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
