--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "966a1436-fc81-47e4-a7d1-4bf138cd7c19",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "48b6a5bb-a1a6-4945-99a8-21fbdbc39392",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "db9dd34a-ff4e-44dc-9990-dd50f4be06d6",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForSeq2SeqLM\n",
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'facebook/wmt19-en-de'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'translation', AutoModelForSeq2SeqLM))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,8 +96,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "7d96886e-d7ca-4b78-b192-b38bf37f0796",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Here is the text in English\n",
     "MY_TEXT = 'We all live in a yellow submarine'\n",
@@ -109,9 +111,7 @@
     "TARGET_LANGUAGE = 'German'\n",
     "\n",
     "MAX_TRANSLATION_LENGTH = 200"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,6 +137,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "1ed978b7-e610-4989-8185-9f32e98c1649",
    "metadata": {
     "slideshow": {
@@ -146,8 +147,9 @@
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_TRANSLATION_UDF(\n",
@@ -162,9 +164,7 @@
     "    )\n",
     ")\n",
     "SELECT translation_text, error_message FROM MODEL_OUTPUT"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
