--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "9701e026-f252-496e-87cb-8b04f46443c2",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "3874261b-9c57-48ef-a4e7-8a47af64fd15",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,8 +71,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "cc473cf7-957b-491c-8925-40e0341ab78a",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForSequenceClassification\n",
@@ -80,9 +82,7 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'cross-encoder/nli-deberta-base'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'zero_shot_classification', AutoModelForSequenceClassification))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,8 +96,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "81271ed8-b61e-4aeb-ac9b-6a12d72de897",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Text to be classified.\n",
     "MY_TEXT = \"\"\"\n",
@@ -119,9 +121,7 @@
     "\n",
     "# Classes, not seen during model training.\n",
     "MY_LABELS = 'space & cosmos, scientific discovery, microbiology, robots, archeology'"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,6 +145,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "71cabf49-3e4e-4745-bb62-e76e5adeac0b",
    "metadata": {
     "slideshow": {
@@ -154,6 +155,7 @@
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
     "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
@@ -169,9 +171,7 @@
     "    )\n",
     ")\n",
     "SELECT label, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +183,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "81695f65054def86",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_ZERO_SHOT_TEXT_CLASSIFICATION_UDF(\n",
@@ -200,9 +202,7 @@
     "    )\n",
     ")\n",
     "SELECT label, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
