--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "264c9323-7f40-40ca-93cf-db4853470206",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "13fa8443-17f5-4f75-8c2a-3a86d13d7911",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,8 +71,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "aebc949e60ff5ab",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForQuestionAnswering\n",
@@ -80,9 +82,7 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'deepset/roberta-base-squad2'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'question_answering', AutoModelForQuestionAnswering))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,8 +96,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "bafb631109c697fa",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# This will be our question\n",
     "TEST_QUESTION = 'What is bitumen used for?'\n",
@@ -113,9 +115,7 @@
     "# Make sure our texts can be used in an SQL statement.\n",
     "TEST_QUESTION = TEST_QUESTION.replace(\"'\", \"''\")\n",
     "TEST_CONTEXT1 = TEST_CONTEXT1.replace(\"'\", \"''\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,6 +141,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "346b1b8a-b1aa-4bea-b351-83b8ee6ab7b7",
    "metadata": {
     "slideshow": {
@@ -150,8 +151,9 @@
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
@@ -165,9 +167,7 @@
     "    )\n",
     ")\n",
     "SELECT answer, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -188,8 +188,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "0787b6ac-f3db-4971-b010-0eac38bd1921",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# New context\n",
     "TEST_CONTEXT2 = \"\"\"\n",
@@ -200,12 +202,11 @@
     "\n",
     "# Make sure our text can be used in an SQL statement.\n",
     "TEST_CONTEXT2 = TEST_CONTEXT2.replace(\"'\", \"''\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "07b71013-b0ae-44c9-a299-ade8e307213c",
    "metadata": {
     "slideshow": {
@@ -215,8 +216,9 @@
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
@@ -230,9 +232,7 @@
     "    )\n",
     ")\n",
     "SELECT answer, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,11 +252,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "e3486cfa-53e2-47be-a445-cd6c13e654bb",
    "metadata": {},
-   "source": [],
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
