--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "eda8ef57-9580-415c-8fe5-622ad9f0bbda",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "e9193a95-2d8c-4722-ab22-10b75d2c5253",
    "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,8 +71,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "26710f2d-a245-43e8-9ff2-292a60dbb19a",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForTokenClassification\n",
@@ -80,9 +82,7 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'sschet/biomedical-ner-all'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'token_classification', AutoModelForTokenClassification))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,19 +98,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "59ec8aee-e40f-44e8-b94b-49c374b923f4",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# We will display all model output\n",
     "%config SqlMagic.displaylimit = 0"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "cc5b5ab6-4481-4b95-bcaa-86ad4da0d6e4",
    "metadata": {},
+   "outputs": [],
    "source": [
     "MY_TEXT = \"\"\"\n",
     "A 63-year-old woman with no known cardiac history presented with a sudden onset of dyspnea requiring\n",
@@ -121,9 +123,7 @@
     "\n",
     "# Make sure our texts can be used in an SQL statement.\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,6 +146,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "40242348-7e1d-4a12-94c2-4d185eaa5d40",
    "metadata": {
     "slideshow": {
@@ -155,8 +156,9 @@
      "running_model"
     ]
    },
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_TOKEN_CLASSIFICATION_UDF(\n",
@@ -169,9 +171,7 @@
     "    )\n",
     ")\n",
     "SELECT start_pos, end_pos, word, entity, error_message FROM MODEL_OUTPUT ORDER BY start_pos, end_pos"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -209,11 +209,11 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "2e103aff-c848-40ab-9f96-429efe845f4e",
    "metadata": {},
-   "source": [],
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
