--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "To demonstrate the token classification task we will use an [English Named Entity Recognition model](https://huggingface.co/sschet/biomedical-ner-all), trained on Maccrobat to recognize the bio-medical entities (107 entities) from a given text corpus (case reports, etc.).\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the speed of the database connection. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
@@ -132,7 +132,7 @@
    "source": [
     "The udf takes various input parameters:\n",
     "\n",
-    "* device_id: To run on a GPU, specify the valid cuda device ID.\n",
+    "* device_id: To run the UDF on a GPU, specify the valid cuda device ID.\n",
     "* bucketfs_conn: The BucketFS connection name.\n",
     "* sub_dir: The directory where the model is stored in the BucketFS.\n",
     "* model_name: The name of the model to use for prediction.\n",
@@ -178,7 +178,7 @@
    "id": "e1ae1f3c-5639-4935-9c28-3d8404587882",
    "metadata": {},
    "source": [
-    "As you can see, we select only some of the udf's output columns in these examples.  If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "We select only some of the udf's output columns in these examples.  If you need more details, you can find information on all available output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
     "\n",
     "The output of the model is sorted into the following columns by the udf:\n",
     "\n",
