--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "To demonstrate the translation task we will use [Facebook WMT19 English-German model](https://huggingface.co/facebook/wmt19-en-de).\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the speed of the database connection. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
@@ -79,6 +79,7 @@
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForSeq2SeqLM\n",
+    "\n",
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'facebook/wmt19-en-de'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'translation', AutoModelForSeq2SeqLM))"
@@ -120,7 +121,7 @@
    "source": [
     "The udf takes various input parameters:\n",
     "\n",
-    "* device_id: To run on a GPU, specify the valid cuda device ID.\n",
+    "* device_id: To run the UDF on a GPU, specify the valid cuda device ID.\n",
     "* bucketfs_conn: The BucketFS connection name.\n",
     "* sub_dir: The directory where the model is stored in the BucketFS.\n",
     "* model_name: The name of the model to use for prediction.\n",
@@ -173,7 +174,7 @@
    "source": [
     "The translated text can be found in the output column `TRANSLATION_TEXT`, and any error occurring while executing the udf will be saved in the `ERROR_MESSAGES` column.\n",
     "\n",
-    "As you can see, we select only some of the udf's output columns in these examples.  If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "We select only some of the udf's output columns in these examples.  If you need more details, you can find information on all available output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
     "\n",
     "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
@@ -185,6 +186,14 @@
     "```\n",
     "Please note, that the response time observed on the provided example with a single input will not be scaled up linearly in case of multiple inputs. Much of the latency falls on loading the model into the CPU memory from BucketFS. This needs to be done only once regardless of the number of inputs."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "996fbceb-5cb7-45e8-b1be-4ab5583c2f17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
