--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -51,8 +51,9 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "1adb7d2770b9906e",
+   "metadata": {},
    "source": [
     "## Specific Configuration for this Tutorial\n",
     "\n",
@@ -60,44 +61,55 @@
     "\n",
     "The tutorial will clone the Script-Languages-Release repository and use a specifc version.\n",
     "First we import a convenience class from the notebook connector, called `ScriptLanguagesContainer`."
-   ],
-   "id": "1adb7d2770b9906e"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
    "execution_count": null,
-   "source": "from exasol.nb_connector.slc import ScriptLanguageContainer",
    "id": "43aa33006ffa975a",
-   "outputs": []
-  },
-  {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": "This class provides a constant pointing to the Github release used in the current version.",
-   "id": "eb25fa82fea00c28"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
-   "source": "ScriptLanguageContainer.GITHUB_URL",
-   "id": "779378af80ac043f"
+   "source": [
+    "from exasol.nb_connector.slc import ScriptLanguageContainer"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "The class `ScriptLanguageContainer` also provides a function to fetch and show all available template flavors:",
-   "id": "9b7c3ae4940a3bda"
+   "id": "eb25fa82fea00c28",
+   "metadata": {},
+   "source": [
+    "The package provides two constants pointing to the Github release used in the current version."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "ScriptLanguageContainer.list_available_flavors()",
-   "id": "9084014cfef72742"
+   "id": "779378af80ac043f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exasol.nb_connector.slc.constants import SLC_GITHUB_REPO, SLC_RELEASE_TAG\n",
+    "print(f\"Github URL: {SLC_GITHUB_REPO}\")\n",
+    "print(f\"Release Tag: {SLC_RELEASE_TAG}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b7c3ae4940a3bda",
+   "metadata": {},
+   "source": [
+    "The class `ScriptLanguageContainer` also provides a function to fetch and show all available template flavors:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9084014cfef72742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ScriptLanguageContainer.list_available_flavors()"
+   ]
   },
   {
    "cell_type": "markdown",
