--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## 2. Using JupySQL with Exasol AI Lab\n",
     "\n",
-    "Next, we will activate the [JupySQL](https://jupysql.ploomber.io) magics:"
+    "Next, we will activate the [JupySQL](https://github.com/ploomber/jupysql) magics:"
    ]
   },
   {
