--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "In this notebook, we are going to train a binary classification model using AWS SageMaker ML Autopilot. The SageMaker Extension provides a script that starts this process. It uploads the training data into the selected S3 bucket, then creates and starts the Autopilot job. Please refer to the Extension <a href=\"https://github.com/exasol/sagemaker-extension/blob/main/doc/user_guide/user_guide.md#execution-of-training\" target=\"_blank\" rel=\"noopener\">User Guide</a> for a detailed description of the service.\n",
     "\n",
-    "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
+    "We will be running SQL queries using <a href=\"https://github.com/ploomber/jupysql\" target=\"_blank\" rel=\"noopener\">JupySQL</a>SQL Magic.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
