--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_analytics.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_analytics.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "In this notebook, we will do some basic analysis on the semantic data extracted from the Customer Support Tickets.\n",
     "\n",
-    "We will be running SQL queries using both the <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic\n",
+    "We will be running SQL queries using both the <a href=\"https://github.com/ploomber/jupysql\" target=\"_blank\" rel=\"noopener\">JupySQL</a>SQL Magic\n",
     "and the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a>.\n",
     "\n",
     "## Prerequisites\n",
