--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "In this notebook, we will load and use a token classifier language model that assigns labels to some tokens in a text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/token-classification\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
-    "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
+    "We will be running SQL queries using <a href=\"https://github.com/ploomber/jupysql\" target=\"_blank\" rel=\"noopener\">JupySQL</a>SQL Magic.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
