#462: Adapted SLC notesbooks to ScriptLanguageContainer changes

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/setup.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "from exasol.nb_connector.slc import ScriptLanguageContainer\n",
     "flavor = \"template-Exasol-8-python-3.10-cuda-conda\"\n",
-    "slc = ScriptLanguageContainer.create(secrets=ai_lab_config, name=\"gpu_slc\", flavor=flavor)\n",
+    "slc = ScriptLanguageContainer.create_or_open(secrets=ai_lab_config, name=\"gpu_slc\", flavor=flavor)\n",
     "print(f\"{slc.name} is ready.\")"
    ]
   },
@@ -94,6 +94,8 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.slc import CondaPackageDefinition, PipPackageDefinition\n",
+    "slc.restore_custom_conda_file()\n",
+    "slc.restore_custom_pip_file()\n",
     "pytorch_pkg = CondaPackageDefinition(pkg=\"pytorch\", version=\"2.7.1=cuda129_mkl_py310_hecdad2d_304\")\n",
     "slc.append_custom_conda_packages([pytorch_pkg])\n",
     "te_pkg = PipPackageDefinition(pkg=\"exasol-transformers-extension\", version=\"3.0.0\")\n",
@@ -138,6 +140,24 @@
    "source": [
     "slc.deploy()\n",
     "print(\"Ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eced4bc",
+   "metadata": {},
+   "source": [
+    "If the deploy function failed, we can try to generate the activation key again by calling `generate_activation_key()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "931c6f32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slc.generate_activation_key(True)"
    ]
   },
   {
