--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -158,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "slc = ScriptLanguageContainer.create(secrets=ai_lab_config, name=\"sample_slc\", flavor=flavor)\n",
+    "slc = ScriptLanguageContainer.create_or_open(secrets=ai_lab_config, name=\"sample_slc\", flavor=flavor)\n",
     "print(f\"{slc.name} is ready.\")"
    ]
   },
