--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -71,7 +71,9 @@
    "id": "79e9843d-d436-4f97-b20e-56d2a42afdaa",
    "metadata": {},
    "outputs": [],
-   "source": "%run ./utils/file_system_ui.ipynb"
+   "source": [
+    "%run ./utils/file_system_ui.ipynb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,7 +93,9 @@
    "id": "ed0ad229-06b6-4083-8daa-a23e176b59d4",
    "metadata": {},
    "outputs": [],
-   "source": "show_directory_content(slc.flavor_path / \"flavor_customization\")"
+   "source": [
+    "show_directory_content(slc.flavor_path / \"flavor_customization\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,6 +111,25 @@
    "metadata": {},
    "source": [
     "#### Package Lists\n",
+    "\n",
+    "Before we use the package list file, we run the restore method from class `ScriptLanguageContainer`, which reverts any possible modifications of the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "420ff9b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slc.restore_custom_pip_file()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0debdd71",
+   "metadata": {},
+   "source": [
     "The package lists have a unified format. Each line consists of the package name and the package version separated by the pipe character `|`, e.g `xgboost|1.3.3`. You can comment out a whole line by adding a hash character `#` the beginning of the line. You can also add a trailing comment to a package definition by adding `#` after the package definition. We usually recommend to install a specific package version to avoid surprises about which version actually gets installed."
    ]
   },
@@ -116,7 +139,9 @@
    "id": "e9720186-a4b2-43f3-81d5-3f96adc48e60",
    "metadata": {},
    "outputs": [],
-   "source": "show_files([slc.custom_pip_file])"
+   "source": [
+    "show_files([slc.custom_pip_file])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,7 +184,9 @@
    "id": "06e8ee1f-7121-4e78-8a7f-35951bf685df",
    "metadata": {},
    "outputs": [],
-   "source": "slc.export()"
+   "source": [
+    "slc.export()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,7 +202,9 @@
    "id": "aabe7634-6d47-40c8-a363-4f53bf8702f3",
    "metadata": {},
    "outputs": [],
-   "source": "show_directory_content(slc.workspace.export_path)"
+   "source": [
+    "show_directory_content(slc.workspace.export_path)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +231,9 @@
    "id": "4e4f1c13-2d80-4a90-9dad-6883ec92dcfe",
    "metadata": {},
    "outputs": [],
-   "source": "slc.deploy()"
+   "source": [
+    "slc.deploy()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,7 +249,9 @@
    "id": "dc2863fc-791c-4035-807b-62abcc705753",
    "metadata": {},
    "outputs": [],
-   "source": "slc.activation_key"
+   "source": [
+    "slc.activation_key"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,6 +265,24 @@
     "cd <slc_dir>\n",
     "./exaslct generate-language-activation --flavor-path flavors/<flavor_path> --bucketfs-name <bucketfs_name> --bucket-name <bucket_name> --container-name <container_name> --path-in-bucket <path_in_bucket>\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "538a6d3a",
+   "metadata": {},
+   "source": [
+    "The class `ScriptLanguageContainer` also provides a method to generate the activation statement without having the container deployed onto the database. The bool parameter indicates if the generated activation statement should be automatically stored to the ai-lab-config or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d6a89da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slc.generate_activation_key(True)"
    ]
   },
   {
