fix more missing save flags

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "SELECT TE_LIST_MODELS_UDF(\n",
     "    '{{ai_lab_config.bfs_connection_name}}',\n",
     "    '{{ai_lab_config.bfs_model_subdir}}'\n",
@@ -150,7 +150,9 @@
    "cell_type": "markdown",
    "id": "16f68d93-3cea-4db5-82b9-23a2e3bad9a5",
    "metadata": {},
-   "source": "Running the `TE_LIST_MODELS_UDF` again now will show that the model was removed from BucketFS."
+   "source": [
+    "Running the `TE_LIST_MODELS_UDF` again now will show that the model was removed from BucketFS."
+   ]
   },
   {
    "cell_type": "code",
@@ -163,7 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "SELECT TE_LIST_MODELS_UDF(\n",
     "    '{{ai_lab_config.bfs_connection_name}}',\n",
     "    '{{ai_lab_config.bfs_model_subdir}}'\n",
