Documentation/#450 improve te notebooks (#453)
* small fixes and better explanation of input and output
* better explanation of input and output

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -60,11 +60,11 @@
    "id": "e0ad672a-8b26-467b-8649-0bf95b1efb61",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the filling of a masked word task we will use a [RadBERT model](https://huggingface.co/StanfordAIMI/RadBERT) which was pre-trained on radiology reports.\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the speed of the database connection. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
@@ -89,9 +89,9 @@
    "id": "9825231e-f7fa-4011-9d11-f94890f6ba7d",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
-    "Let's see if the model can fill in a masked word in the following text. This is an instruction usually given to a patient when a radiographer is doing a chest X-ray."
+    "Let's see if the model can fill in a masked word in the following text. We will be using the TE_FILLING_MASK_UDF` for this. We will use an patient-instruction as the input text."
    ]
   },
   {
@@ -102,6 +102,7 @@
    "outputs": [],
    "source": [
     "# This is a sentence with a masked word that will be given to the model.\n",
+    "# It instruction usually given to a patient when a radiographer is doing a chest X-ray\n",
     "MY_TEXT = 'Take a deep [MASK] and hold it'\n",
     "\n",
     "# Make sure our text can be used in an SQL statement.\n",
@@ -113,6 +114,15 @@
    "id": "f3727075-4680-4f2f-83c2-17e5c22c6a57",
    "metadata": {},
    "source": [
+    "The udf takes various input parameters:\n",
+    "\n",
+    "* device_id: To run the UDF on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* text_data: The text data containing masking tokens.\n",
+    "* top_k: The number of predictions to return.\n",
+    "\n",
     "We will collect the 5 best answers.\n",
     "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
@@ -143,7 +153,7 @@
     "        5\n",
     "    )\n",
     ")\n",
-    "SELECT filled_text, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
+    "SELECT filled_text, score, rank, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
    ]
   },
   {
@@ -151,6 +161,16 @@
    "id": "5c3c4047-2cbb-4111-a932-0224844c0f43",
    "metadata": {},
    "source": [
+    "We select only some of the udf's output columns in these examples.  If you need more details, you can find information on all available output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "The output of the model is sorted into the following columns by the udf:\n",
+    "\n",
+    "* filled_text: the filled text which replaces the masked part od the input text\n",
+    "* score: the confidence, with which the filled_text was predicted\n",
+    "* rank: the rank of the prediction. In this context, all predictions/labels for one input are ranked by their score. rank=1 means best result/highest score.\n",
+    "* error_message: error occurring while executing the udf will be saved here\n",
+    "\n",
+    "\n",
     "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
     "Another advantage of making predictions within the database is enhanced data security. The task of safeguarding privacy can be simplified given the fact that the source data never leaves the database machine.\n",
@@ -187,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
