--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -60,11 +60,11 @@
    "id": "4dfc8b6c-ace2-4f93-8bd1-f0a8ff496413",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the token classification task we will use an [English Named Entity Recognition model](https://huggingface.co/sschet/biomedical-ner-all), trained on Maccrobat to recognize the bio-medical entities (107 entities) from a given text corpus (case reports, etc.).\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the speed of the database connection. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
@@ -89,9 +89,11 @@
    "id": "1581365c-eba7-4c9a-ae67-14543cb78dd2",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
-    "Below is a medical report on a patient examination. In this report, we will be looking for occurrences of recognized entities, such as patient data (e.g. age), symptoms, clinical events, laboratory test results, etc."
+    "Below is a medical report on a patient examination.\n",
+    "\n",
+    "We will be searching for occurrences of recognized entities in this report using the `TE_TOKEN_CLASSIFICATION_UDF`. Such recognized entities can include patient data (e.g. age), symptoms, clinical events, laboratory test results, etc."
    ]
   },
   {
@@ -128,6 +130,17 @@
    "id": "dff2b9c8-6b6a-4e7a-b065-898d841a34fc",
    "metadata": {},
    "source": [
+    "The udf takes various input parameters:\n",
+    "\n",
+    "* device_id: To run the UDF on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* text_data: The text to analyze.\n",
+    "* aggregation_strategy: The strategy about whether to fuse tokens based on the model prediction.\n",
+    "\n",
+    "You need to supply these parameters in the correct order. Further information can be found in the  <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
     "Let's run the token classification model. We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
@@ -165,6 +178,17 @@
    "id": "e1ae1f3c-5639-4935-9c28-3d8404587882",
    "metadata": {},
    "source": [
+    "We select only some of the udf's output columns in these examples.  If you need more details, you can find information on all available output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "The output of the model is sorted into the following columns by the udf:\n",
+    "\n",
+    "* start_pos: The index of the starting character of the token.\n",
+    "* end_pos: The index of the ending character of the token.\n",
+    "* word: The token found in the text.\n",
+    "* entity: The token-type the found token was sorted into.\n",
+    "* score: The confidence, with which the token was assigned.\n",
+    "* error_message: Errors occurring while executing the udf will be saved here.\n",
+    "\n",
     "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
     "Another advantage of making predictions within the database is enhanced data security. The task of safeguarding privacy can be simplified given the fact that the source data never leaves the database machine.\n",
@@ -208,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
