--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "In this notebook, we will load and use a generative language model that can produce a continuation for a given text. Learn more about the Text Generation task <a href=\"https://huggingface.co/tasks/text-generation\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
-    "To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "To execute queries and load data from the Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -42,11 +42,11 @@
    "id": "6d11a1d4-051d-4d21-990a-660beaeb8f0c",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the text generation task we will use [Open Pretrained Transformers (OPT)](https://huggingface.co/facebook/opt-125m), a decoder-only pre-trained transformer from Facebook.\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the speed of the database connection. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
@@ -71,9 +71,9 @@
    "id": "b4efa927-aa78-4b80-9b78-25e722904217",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
-    "Let's put the start of our conversation in a variable."
+    "Let's put our starting text in a variable. We will feed this text to the `TE_TEXT_GENERATION_UDF`, which will use the previously downloaded model to generate a continuation of the input text."
    ]
   },
   {
@@ -87,18 +87,6 @@
     "\n",
     "# Make sure our texts can be used in an SQL statement.\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56498899-79f8-471e-8337-983184dcd513",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's put a limit on the length of text the model can generate in one call.\n",
-    "# The limit is specified in the number of characters.\n",
-    "MAX_LENGTH = 30"
    ]
   },
   {
@@ -122,8 +110,40 @@
    "id": "27b1dd67-ffed-4bf8-9ee7-a1e003cdbcc6",
    "metadata": {},
    "source": [
-    "At the start, the `MY_TEXT` variable has an initial context. We will update and print this variable at every call to the model.\n",
-    "Please run the next cell multiple times to see how the text evolves."
+    "The udf takes various input parameters:\n",
+    "\n",
+    "* device_id: To run the UDF on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* text_data: The text continue.\n",
+    "* max_length: The maximum total length of text to be generated.\n",
+    "* return_full_text: If set to FALSE, only added text is returned, otherwise the full text is returned.\n",
+    "\n",
+    "You need to supply these parameters in the correct order. Further information can be found in the  <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "We will use the `max_lenght` paramter to put a limit on the length of text the model can generate in one call."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb3aa00858df05ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_LENGTH = 30"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "470cbffaa64dbfc0",
+   "metadata": {},
+   "source": [
+    "At the start, the `MY_TEXT` variable gives an initial context to the generated text. We will update this variable with the generated text after each call to the udf, making it add to the text each time.\n",
+    "The generated text can be found in the `generated_text` column of the udf-output.\n",
+    "\n",
+    "You can run the next cell multiple times to see how the text evolves with multiple calls."
    ]
   },
   {
@@ -157,10 +177,18 @@
     "    conn.execute(query=activation_sql)\n",
     "    result = conn.export_to_pandas(query_or_table=sql).squeeze()\n",
     "    MY_TEXT = result['GENERATED_TEXT']\n",
-    "    # The error can be observed at result['ERROR_MESSAGE']\n",
+    "    # Errors can be observed at result['ERROR_MESSAGE']\n",
     "\n",
     "print(MY_TEXT)\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e1d0ab9bebb94ee",
+   "metadata": {},
+   "source": [
+    " If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>."
    ]
   }
  ],
@@ -180,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
