--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -60,11 +60,11 @@
    "id": "af7aca6a-5479-41ec-936c-d2cac34b6b11",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
-    "To demonstrate the zero shot classification task we will use the [Cross-Encoder for Natural Language Inference](https://huggingface.co/cross-encoder/nli-deberta-base).\n",
+    "To demonstrate the zero shot classification task we will use the [Cross-Encoder for Natural Language Inference](https://huggingface.co/cross-encoder/nli-deberta-base) model.\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the speed of the database connection. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
@@ -89,9 +89,9 @@
    "id": "9ae22cbe-92c7-44a1-af67-155cf78de7ac",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
-    "Below is a chunk of text that we will try to classify using labels that were not used during the model training. Out of five suggested labels the first two are much more relevant than the others. We expect the model to give them significantly higher score."
+    "Below is a text that we will try to classify using labels that were not used during the model training. Out of five suggested labels the first two are much more relevant than the others. We expect the model to give them significantly higher score."
    ]
   },
   {
@@ -128,7 +128,19 @@
    "id": "768a97ed-a104-4f89-8c7b-9fdd6558b5ab",
    "metadata": {},
    "source": [
-    "Let's run the zero shot text classification model. We will save the result in the variable `udf_output` to support automatic testing of this notebook."
+    "Let's run the zero shot text classification model. We will save the result in the variable `udf_output` to support automatic testing of this notebook.\n",
+    "\n",
+    "The `TE_ZERO_SHOT_TEXT_CLASSIFICATION_UDF` takes various input parameters:\n",
+    "\n",
+    "* device_id: To run the UDF on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* text_data: The text to be classified.\n",
+    "* candidate_labels: Labels, should be comma-separated.\n",
+    "* return_ranks: Either \"ALL\" or \"HIGHEST\".\n",
+    "\n",
+    "You need to supply these parameters in the correct order. Further information can be found in the  <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>."
    ]
   },
   {
@@ -155,6 +167,37 @@
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        '{{MY_LABELS}}',\n",
+    "        'HIGHEST'\n",
+    "    )\n",
+    ")\n",
+    "SELECT label, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffe2ad50985a8a9d",
+   "metadata": {},
+   "source": [
+    "In this instance, we let the model return only the highest ranking result by setting `return_ranks = \"HIGHEST\"`. If we want to get all available results instead, we can run it with `return_ranks = \"ALL\"` instead:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81695f65054def86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output\n",
+    "WITH MODEL_OUTPUT AS\n",
+    "(\n",
+    "    SELECT TE_ZERO_SHOT_TEXT_CLASSIFICATION_UDF(\n",
+    "        NULL,\n",
+    "        '{{ai_lab_config.bfs_connection_name}}',\n",
+    "        '{{ai_lab_config.bfs_model_subdir}}',\n",
+    "        '{{MODEL_NAME}}',\n",
+    "        '{{MY_TEXT}}',\n",
+    "        '{{MY_LABELS}}',\n",
     "        'ALL'\n",
     "    )\n",
     ")\n",
@@ -166,6 +209,15 @@
    "id": "df16ed3d-e381-4535-afa9-22e18fb64362",
    "metadata": {},
    "source": [
+    "We select only some of the udf's output columns in these examples.  If you need more details, you can find information on all available output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "The output of the model is sorted into the following columns by the udf:\n",
+    "\n",
+    "* label: the label the model assigned for the input\n",
+    "* score: the confidence, with which the label was assigned\n",
+    "* rank: the rank of the label. In this context, all predictions/labels for one input are ranked by their score. rank=1 means best result/highest score.\n",
+    "* error_message: error occurring while executing the udf will be saved here\n",
+    "\n",
     "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
     "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
@@ -180,6 +232,14 @@
     "```\n",
     "Please note, that the response time observed on the provided example with a single input will not be scaled up linearly in case of multiple inputs. Much of the latency falls on loading the model into the CPU memory from BucketFS. This needs to be done only once regardless of the number of inputs."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7f7dd9-a6ec-4231-99a1-5887310b132a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -198,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
